# kodiak-sets

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  criterion.toml
.github/: dependabot.yml
.github/workflows/: README.md  cargo-tarpaulin.yml
benches/: helper.rs  inserts.rs
benchmarks/0.2.0/data/main/bench_new_vs_with_capacity/seq new - insert 1000000 chars/: benchmark.cbor  measurement_230819154548.cbor
benchmarks/0.2.0/data/main/bench_new_vs_with_capacity/seq with capacity - insert 1000000 chars/: benchmark.cbor  measurement_230819154604.cbor
benchmarks/0.2.0/data/main/bench_seq_vs_vec_new/seq new - insert 1000000 chars/: benchmark.cbor  measurement_230819154630.cbor
benchmarks/0.2.0/data/main/bench_seq_vs_vec_new/vec new - insert 1000000 chars/: benchmark.cbor  (+1 more)
benchmarks/0.2.0/reports/: index.html
benchmarks/0.2.0/reports/bench_new_vs_with_capacity/: index.html
benchmarks/0.2.0/reports/bench_new_vs_with_capacity/seq new - insert 1000000 chars/: index.html
benchmarks/0.2.0/reports/bench_new_vs_with_capacity/seq with capacity - insert 1000000 chars/: index.html
benchmarks/0.2.0/reports/bench_seq_vs_vec_new/: index.html
benchmarks/0.2.0/reports/bench_seq_vs_vec_new/seq new - insert 1000000 chars/: index.html
benchmarks/0.2.0/reports/bench_seq_vs_vec_new/vec new - insert 1000000 chars/: index.html
examples/: README.md
examples/seq-avg/: Cargo.toml
examples/seq-avg/src/: main.rs
examples/seq-fraction/: Cargo.toml
examples/seq-fraction-sqlite/: 1-create-table-to-store-seq.sql  Cargo.toml  README.md  init-db.sh
examples/seq-fraction-sqlite/src/: main.rs
examples/seq-fraction/src/: main.rs
examples/seq-using-serde-derive/: Cargo.toml
examples/seq-using-serde-derive/src/: main.rs
src/: lib.rs  position.rs  sequence.rs
src/sequence/: mod.rs  sequence.rs
src/sequence/tests/: node_tests.rs  position_tests.rs
src/tests/: mod.rs  node_tests.rs  position_tests.rs  sequence_tests.rs
src/tests/position/: tests.rs
src/tests/sequence/: mod.rs  setup.rs  tests.rs
